<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        tools:src ="@tools:sample/backgrounds/scenic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/question" />



    <ImageView
        android:id="@+id/image"
        android:layout_width="@dimen/width_look"
        android:layout_height="@dimen/_150sdp"
        android:src="@drawable/ic_question"
        android:background="@drawable/bg_corner_white"
        android:padding="@dimen/small_margin"
        android:layout_marginBottom="@dimen/large_margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/image2"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <TextView
        android:id="@+id/answer_1"
        android:layout_width="@dimen/width_look"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/small_margin"
        android:background="@drawable/bg_corner_white"
        android:text="@string/choose"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="@dimen/text_size"
        app:layout_constraintTop_toBottomOf="@id/image"
        app:layout_constraintStart_toStartOf="@id/image"
        app:layout_constraintEnd_toEndOf="@id/image"
        />

    <ImageView
        android:id="@+id/image2"
        android:layout_width="@dimen/width_look"
        android:layout_height="@dimen/_150sdp"
        android:src="@drawable/ic_question"
        android:background="@drawable/bg_corner_white"
        android:padding="@dimen/small_margin"
        android:layout_marginBottom="@dimen/large_margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />


    <TextView
        android:id="@+id/answer_2"
        android:layout_width="@dimen/width_look"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/small_margin"
        android:background="@drawable/bg_corner_white"
        android:text="@string/choose"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="@dimen/text_size"
        app:layout_constraintTop_toBottomOf="@id/image2"
        app:layout_constraintStart_toStartOf="@id/image2"
        app:layout_constraintEnd_toEndOf="@id/image2"
        />

    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />


    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/back_home"
        android:textColor="@color/black"
        android:textSize="@dimen/large_text_size"
        android:textStyle="bold"
        android:layout_margin="@dimen/medium_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_home"
        app:layout_constraintBottom_toTopOf="@id/image"
        />

    <ImageView
        android:id="@+id/back_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_home"
        android:src="@drawable/ic_home"
        android:textColor="@color/purple_700"
        android:textSize="@dimen/small_text_size"
        android:textStyle="bold"
        android:layout_margin="@dimen/medium_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/question"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/back"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/ic_back_back"
        android:layout_margin="@dimen/medium_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/next"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/ic_next"
        android:layout_margin="@dimen/medium_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/result"
        android:layout_width="@dimen/width_look"
        android:layout_height="@dimen/width_look"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/small_margin"
        app:lottie_autoPlay="true"
        android:visibility="gone"
        android:background="@drawable/bg_corner_result"
        app:lottie_fileName="correct_answer.json"
        app:lottie_loop="true" />

</androidx.constraintlayout.widget.ConstraintLayout>